PyMaker/datas/object2/RawHTML/i11001/Python_DOC_referPages.python-3-4-3-asyncio-keywords-syntaxerror.txt
<div class="post-text" itemprop="text">
<p>Terminal output is worth a thousand words, I guess</p>
<pre><code>[~] $ python
Python 3.4.3 (default, Jun 22 2016, 16:03:29)
[GCC 4.9.3] on linux
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; import asyncio
&gt;&gt;&gt; async def fun():
  File "&lt;stdin&gt;", line 1
    async def fun():
            ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The <code>async</code> and <code>await</code> syntax was introduced in Python 3.5. (<a href="https://docs.python.org/3/reference/compound_stmts.html#coroutines" rel="nofollow">https://docs.python.org/3/reference/compound_stmts.html#coroutines</a>)</p>
<p>In Python 3.4 you need to use the <code>@asyncio.coroutine</code> decorator and <code>yield from</code> syntax. (<a href="https://docs.python.org/3.4/library/asyncio-task.html#coroutines" rel="nofollow">https://docs.python.org/3.4/library/asyncio-task.html#coroutines</a>)</p>
</div>
<div class="post-text" itemprop="text">
<p>The <code>async</code> keyword was added in Python 3.5.</p>
</div>
